syntax = "proto3";

package calc;

option go_package = "calc/calcpb";

message Num {
    int64 Number = 1;
}

message SumRequest {
    int64 Num1 = 1;
    int64 Num2 = 2;
}

message SumResponse {
    int64 Num = 1;
}

message PrimeNumberRequest {
    int64 Num = 1;
}

message PrimeNumberResponse {
    int64 Num = 1;
}

message ComputeAvgRequest {
    int64 Num = 1;
}

message ComputeAvgResponse {
    int64 Num = 1;
}

message FindMaxNumRequest {
    int64 Num = 1;
}

message FindMaxNumResponse {
    int64 Num = 1;
}

service Calc{
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNum(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};
    rpc ComputeAvg(stream ComputeAvgRequest) returns (ComputeAvgResponse) {};
    rpc FindMaxNum(stream FindMaxNumRequest) returns (stream FindMaxNumResponse) {};
}

